--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!-- 현대카드 날씨 앱에 관한 소개 페이지 작성 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>현대카드 웨더 앱</title>
+</head>
+<body>
+    <div class="header-container">
+    </div>
+    <div class="main-container">
+    </div>
+    <div class="footer-container">
+        <footer class="footer">푸터</footer>
+    </div>
+</body>
+</html>
