--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-KR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>현대카드 웨더 앱</title>
+    <meta name="keywords" content="현대카드 웨더,날씨,weather">
+    <meta name="description" content="현대카드 웨더 weather.hyundaicard.com">
+    <meta name="format-detection" content="telephone=no">
+    <meta property="og:url" content="http://weather.hyundaicard.com/" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="현대카드 웨더">
+    <meta property="og:description" content="새로운 방법으로 날씨를 표현하는 현대카드의 날씨 정보서비스. 위트 있는 날씨 멘트와 감각적인 표현으로 현대카드만의 차별화된 날씨 정보를 제공합니다.">
+    <meta property="og:image" content="http://mud-kage.kakao.co.kr/14/dn/btqb3Lxep9j/YEuqn1bxfGpBfxTjSM93K1/o.jpg">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="images/img_favicon_v1.ico">
+    <link rel="apple-touch-icon" href="images/img_favicon_v1.ico">
 </head>
 
 <body>
@@ -29,7 +43,34 @@
         </header>
     </div>
     <div class="main-container">
-        <main class="main">메인 콘텐츠</main>
+        <main class="section">
+            <section class="service-interoduction">
+                <div class="hyundaicard-weather">
+                    <div class="content-wrapper">
+                        <h2 class="section-heading">
+                            <span>매일 똑같은 날씨는 없다</span>
+                            <span>현대카트 웨더</span>
+                        </h2>
+                        <p class="section-description">
+                            <span>새운로 방법으로 날씨를 표현하는 현대카드의 날씨정보</span>
+                            <span>서비스입니다.</span>
+                            <span>현대카드만의 차별화된 날씨 정보를 제공합니다</span>
+                        </p>
+                        <ul class="btn-store-list">
+                            <li>
+                                <figure class="btn-store">
+                                    <a href="#">
+                                    <img src="images/web/btn_down1.png" alt="Download on the app store">
+                                </figure>
+                            </li>
+                                </a>
+                                <figcaption>iOS 6.0 버전 이상 지원</figcaption>
+                            </li>
+                        </ul>  
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
     <div class="footer-container">
         <footer class="footer">푸터</footer>
